--- a/myBio.html
+++ b/myBio.html
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Bio</title>
 
-    
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+    <script src="myBio.js"></script>
+  </head>
+  <body>
+    <header>
+      <h1>Andrew Langston</h1>
+      <ul class="navlinks">
+        <li><a href="#"></a>About Me</li>
+        <li><a href="#"></a>Projects</li>
+        <li><a id="btnSkill" href="#"></a>Skills</li>
+        <li><a href="/contactMe.html"></a>Contact Me</li>
+      </ul>
+    </header>
+    <main>
+      <h2 id="meTitle">About Me</h2>
+      <div id="aboutMe">
+        <p></p>
+        <img
+          id="andyPic"
+          src="images/me.jpg"
+          alt="A Picture of Andrew Langston"
+        />
+      </div>
+      <h2 id="projTitle">Projects</h2>
+      <div id="projects">
+        <ul class="projlist">
+          <li>Mixed Messages Project</li>
+          <li>#</li>
+          <li>#</li>
+          <li>#</li>
+        </ul>
+      </div>
+      <h2 id="skillTitle">Skills</h2>
+      <div id="skills">
+        <ul class="skilllist">
+          <li><img src="images/download (1).png" alt="" /></li>
+          <li><img src="images/css.png" alt="" /></li>
+          <li><img src="images/download.png" alt="" /></li>
+          <li><img src="images/git.png" alt="" /></li>
+        </ul>
+      </div>
+      <div id="contactMe"></div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
