-m Page scroll added

--- a/myBio.html
+++ b/myBio.html
@@ -7,16 +7,16 @@
     <title>My Bio</title>
 
     <link rel="stylesheet" href="style.css" />
-    <script src="myBio.js"></script>
+    <script src="script.js"></script>
   </head>
   <body>
     <header>
       <h1>Andrew Langston</h1>
       <ul class="navlinks">
-        <li><a href="#"></a>About Me</li>
-        <li><a href="#"></a>Projects</li>
-        <li><a id="btnSkill" href="#"></a>Skills</li>
-        <li><a href="/contactMe.html"></a>Contact Me</li>
+        <li><a href="#meTitle">About Me</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="contactMe.html">Contact Me</a></li>
       </ul>
     </header>
     <main>
